--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@capacitor/android": "^2.4.2",
     "@capacitor/core": "2.4.2",
+    "@capacitor/ios": "^2.4.2",
     "@ionic/cli": "^6.12.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
@@ -11,7 +13,8 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
     "@types/jest": "^24.0.25",
-    "@types/node": "^12.12.24",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/node": "^12.19.6",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
@@ -19,9 +22,11 @@
     "cordova-res": "^0.15.1",
     "immer": "^7.0.14",
     "ionicons": "^5.0.0",
+    "lodash.debounce": "^4.0.8",
     "native-run": "^1.2.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-intl": "^5.10.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -32,12 +37,16 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npx cap sync",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "verify": "yarn lint && yarn test",
     "lint": "eslint \"./**/*.{js,jsx,ts,tsx,mjs}\" --fix",
-    "precommit": "yarn lint"
+    "precommit": "yarn lint",
+    "android": "npx cap add android",
+    "ios": "npx cap add ios",
+    "ios-open": "npx cap open ios",
+    "android-open": "npx cap open android"
   },
   "eslintConfig": {
     "extends": "react-app"
