--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "cordova-res": "^0.15.1",
+    "capacitor-resources": "^2.0.5",
     "immer": "^7.0.14",
     "ionicons": "^5.0.0",
     "lodash.debounce": "^4.0.8",
@@ -46,7 +46,8 @@
     "android": "npx cap add android",
     "ios": "npx cap add ios",
     "ios-open": "npx cap open ios",
-    "android-open": "npx cap open android"
+    "android-open": "npx cap open android",
+    "resources": "capacitor-resources -p android,ios"
   },
   "eslintConfig": {
     "extends": "react-app"
