--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/react-redux": "^7.1.9",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
+    "cordova-res": "^0.15.2",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
