--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "capacitor-resources": "^2.0.5",
     "immer": "^7.0.14",
     "ionicons": "^5.0.0",
+    "leaflet": "^1.7.1",
     "lodash.debounce": "^4.0.8",
     "native-run": "^1.2.2",
     "node-sass": "4.14.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-intl": "^5.10.1",
+    "react-leaflet": "^3.0.5",
     "react-redux": "^7.2.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -67,6 +69,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.2",
+    "@types/leaflet": "^1.5.19",
     "@types/react-redux": "^7.1.9",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
