--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.13.0",
     "react-intl": "^5.10.1",
     "react-leaflet": "^3.0.5",
+    "react-otp-input": "^2.3.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
