--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.21.1",
     "capacitor-resources": "^2.0.5",
     "immer": "^7.0.14",
     "ionicons": "^5.0.0",
@@ -37,6 +38,7 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.8.3"
   },
   "scripts": {
