--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,14 +1,17 @@
 {
-  "appId": "io.ionic.starter",
+  "appId": "com.royality.wallet",
   "appName": "RWallet",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "build",
   "plugins": {
     "SplashScreen": {
-      "launchShowDuration": 0,
-      "launchAutoHide": true
+      "launchShowDuration": 0
+    },
+    "PushNotifications": {
+      "PresentationOptions": ["badge", "sound", "alert"]
     }
   },
+
   "cordova": {}
 }
