--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@capacitor/android": "^2.4.2",
     "@capacitor/core": "2.4.2",
     "@capacitor/ios": "^2.4.2",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/firebase-authentication": "^5.31.1",
     "@ionic/cli": "^6.12.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
@@ -21,6 +23,9 @@
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.21.1",
     "capacitor-resources": "^2.0.5",
+    "cordova-plugin-firebase-authentication": "^4.0.2",
+    "cordova-support-android-plugin": "^1.0.2",
+    "firebase": "^8.2.9",
     "immer": "^7.0.14",
     "ionicons": "^5.0.0",
     "leaflet": "^1.7.1",
