--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.12",
     "@types/react-router-dom": "^5.1.3",
+    "ad-bs-converter": "^0.5.0",
     "axios": "^0.21.1",
+    "bikram-sambat": "^1.6.0",
     "capacitor-resources": "^2.0.5",
     "cordova-plugin-firebase-authentication": "^4.0.2",
     "cordova-support-android-plugin": "^1.0.2",
