--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -6,11 +6,7 @@
   "webDir": "build",
   "plugins": {
     "PushNotifications": {
-      "PresentationOptions": [
-        "badge",
-        "sound",
-        "alert"
-      ]
+      "PresentationOptions": ["badge", "sound", "alert"]
     },
     "cordova": {}
   }
