--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@capacitor/android": "^2.4.2",
     "@capacitor/core": "2.4.2",
     "@capacitor/ios": "^2.4.2",
+    "@ionic-native/app-version": "^5.34.0",
     "@ionic-native/core": "^5.31.1",
     "@ionic-native/firebase-authentication": "^5.31.1",
     "@ionic/cli": "^6.12.0",
@@ -25,6 +26,7 @@
     "axios": "^0.21.1",
     "bikram-sambat": "^1.6.0",
     "capacitor-resources": "^2.0.5",
+    "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-firebase-authentication": "^4.0.2",
     "cordova-support-android-plugin": "^1.0.2",
     "firebase": "^8.2.10",
